DRY auth volume and volume mounts
Signed-off-by: Clemens Beck <mail@beckcl.dev>

--- a/valkey/templates/statefulset.yaml
+++ b/valkey/templates/statefulset.yaml
@@ -45,7 +45,7 @@ spec:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum | trunc 32 | quote }}
         {{- end }}
         {{- if (include "valkey.renderAuthSecret" .) | eq "true" }}
-        checksum/auth-secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum | trunc 32 }}
+        checksum/auth-secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum | trunc 32 | quote }}
         {{- end }}
     spec:
       {{- (include "valkey.imagePullSecrets" .) | nindent 6 }}
@@ -92,7 +92,7 @@ spec:
               mountPath: /valkey-users-secret
               readOnly: true
             {{- end }}
-            {{- if or (include "valkey.hasInlinePasswords" . | eq "true") .Values.auth.aclConfig }}
+            {{- if (include "valkey.renderAuthSecret" .) | eq "true" }}
             - name: valkey-auth-secret
               mountPath: /valkey-auth-secret
               readOnly: true
@@ -259,7 +259,7 @@ spec:
             secretName: {{ .Values.auth.usersExistingSecret }}
             defaultMode: 0400
         {{- end }}
-        {{- if or (include "valkey.hasInlinePasswords" . | eq "true") .Values.auth.aclConfig }}
+        {{- if (include "valkey.renderAuthSecret" .) | eq "true" }}
         - name: valkey-auth-secret
           secret:
             secretName: {{ include "valkey.fullname" . }}-auth
