--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -80,7 +80,7 @@ spec:
               mountPath: /valkey-users-secret
               readOnly: true
             {{- end }}
-            {{- if or (include "valkey.hasInlinePasswords" . | eq "true") .Values.auth.aclConfig }}
+            {{- if (include "valkey.renderAuthSecret" .) | eq "true" }}
             - name: valkey-auth-secret
               mountPath: /valkey-auth-secret
               readOnly: true
@@ -249,7 +249,7 @@ spec:
             secretName: {{ .Values.auth.usersExistingSecret }}
             defaultMode: 0400
         {{- end }}
-        {{- if or (include "valkey.hasInlinePasswords" . | eq "true") .Values.auth.aclConfig }}
+        {{- if (include "valkey.renderAuthSecret" .) | eq "true" }}
         - name: valkey-auth-secret
           secret:
             secretName: {{ include "valkey.fullname" . }}-auth
