Add helm value extraEnvFromSecrets to metrics exporter in order to read the contents of a secret as environment variable in metrics exporter container
Signed-off-by: dpailer <dirk.pailer@gmail.com>

--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -197,6 +197,13 @@ spec:
             - name: {{ $key }}
               value: "{{ $val }}"
             {{- end }}
+          {{- with .Values.metrics.exporter.extraEnvFromSecrets }}
+          envFrom:
+            {{- range . }}
+            - secretRef:
+                name: {{ .name }}
+            {{- end }}
+          {{- end }}
         {{- end }}
       volumes:
         - name: scripts
